fix scrollbars

--- a/docs/css/override.css
+++ b/docs/css/override.css
@@ -27,16 +27,16 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 0 0.666rem;
   background-position: center;
   background-repeat: no-repeat;
   background-color: black;
   background-image: url('/img/192050.jpg');
+  overflow: hidden;
   z-index: 999;
 }
 header {
@@ -800,9 +800,6 @@ label {
   }
 }
 
-#gitFeed {
-  width: 100vw;
-}
 
 
 input[name=q] {
